# EltexC

./: 5tar.sh
2mod/Lists/: CMakeLists.txt  argParse.c  argParse.h  list.c  list.h  main.c
2mod/RPG/: CMakeLists.txt  character.c  character.h  items.c  items.h  main.c  ui.c  ui.h  utils.h  world.c  world.h
2mod/RPG/adventures/: enemy.c  enemy.h
2mod/RPG/base/: character.c  character.h  world.c  world.h
2mod/RPG/items/: equipment.c  equipment.h  healing.c  healing.h
2mod/RPG/system/: save.c  ui.c  ui.h  utils.c  utils.h
2mod/Tree/: CMakeLists.txt  main.c  tree.c  tree.h
2mod/Water/: CMakeLists.txt  beakers.c  beakers.h  main.c
Lists/: CMakeLists.txt  list.c
RPG/: CMakeLists.txt
RPG/system/: save.c  save.h  utils.c
Water/: CMakeLists.txt  beakers.c
